# tee-totally

./: .gitignore  README.md  cli.py  clubs.py  compare.py  find.py  get.py  list.py  manifest.py  pyproject.toml  scrape.py  state.py  test_everything.py
scripts/: fetch_clubs.py  st.py  update_manifest.py
tee_totally/: __init__.py  cli.py  clubs.py  compare.py  find.py  get.py  list.py  logger.py  notifications.py  scrape.py  state.py  test_everything.py
